-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11, 13, 14
-
Component/s: hotspot
-
b09
-
ppc
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8232054 | 13.0.2 | Martin Doerr | P4 | Resolved | Fixed | b02 |
| JDK-8229910 | 11.0.5 | Martin Doerr | P4 | Resolved | Fixed | team |
The jtreg test "serviceability/sa/sadebugd/DebugdConnectTest.java" fails with "AssertionFailure: result must >= than stack pointer".
The Java code doesn't read the right slots for the interpreter frame's monitors.
Steps to fix it:
- Make frame layout consistent between dbg and product build. Can be done by removing additional "reserved" slot which only exists in dbg builds. We can live without it.
- Implement offsets accordingly in PPC64Frame.java.
- As additonal improvement, initialize all relevant frame slots in generate_fixed_frame. Tools may access them before the interpreter writes useful content to them.
The Java code doesn't read the right slots for the interpreter frame's monitors.
Steps to fix it:
- Make frame layout consistent between dbg and product build. Can be done by removing additional "reserved" slot which only exists in dbg builds. We can live without it.
- Implement offsets accordingly in PPC64Frame.java.
- As additonal improvement, initialize all relevant frame slots in generate_fixed_frame. Tools may access them before the interpreter writes useful content to them.
- backported by
-
JDK-8229910 [PPC64] SA reads wrong slots from interpreter frames
-
- Resolved
-
-
JDK-8232054 [PPC64] SA reads wrong slots from interpreter frames
-
- Resolved
-
- duplicates
-
JDK-8211767 jtreg: Some SA tests are failing on PPC64
-
- Closed
-
- relates to
-
JDK-8297082 Remove sun/tools/jhsdb/BasicLauncherTest.java from problem list
-
- Resolved
-
-
JDK-8209790 SA tools not providing option to connect to debug server
-
- Resolved
-
There are no Sub-Tasks for this issue.