8228649: [PPC64] SA reads wrong slots from interpreter frames

Make frame layout consistent between dbg and product build and implement offsets accordingly.

Reviewed-by: goetz, gromero